style the left dashboard menu, add icons and font

--- a/index.html
+++ b/index.html
@@ -9,35 +9,50 @@
 <body>
     <div class="page">
         <div class="left-side">
-            <div class="Dashboard">
+                <div class="dashboard">      
+                    <img src="icons/view-dashboard.svg" alt="dashboard icon">
+                    <div class="text">Dashboard</div>
+                </div>
                 <div class="top-menu">
-                    <div>Home</div>
-                    <div>Profile</div>
-                    <div>Messages</div>
-                    <div>History</div>
-                    <div>Tasks</div>
-                    <div>Communities</div>
+                        <img src="icons/home.svg" alt="Home icon">
+                        <div class="text">Home</div>
+                        <img src="icons/account.svg" alt="Profile icon">
+                        <div class="text">Profile</div>
+                        <img src="icons/message.svg" alt="message icon">
+                        <div class="text">Messages</div>
+                        <img src="icons/clock.svg" alt="history icon">
+                        <div class="text">History</div>
+                        <img src="icons/pencil.svg" alt="task icon">
+                        <div class="text">Tasks</div>
+                        <img src="icons/account-group.svg" alt="Community icon">
+                        <div class="text">Communities</div>
                 </div>
                 <div class="bottom-menu">
-                    <div>Settings</div>
-                    <div>Support</div>
-                    <div>Privacy</div>
+                        <img src="icons/settings.svg" alt="settings icon">
+                        <div class="text">Settings</div>
+                        <img src="icons/help.svg" alt="support icon">
+                        <div class="text">Support</div>
+                        <img src="icons/shield.svg" alt="privacy icon">
+                        <div class="text">Privacy</div>
                 </div>
-            </div>
         </div>
         <div class="right-side">
             <div class="top-bar">
-                <div class="search-icon"></div>
-                <input type="text" name="search" id="search">
-                <div class="bell-icon"></div>
-                <div class="profile-icon"></div>
-                <div class="account-name">Mohammed Bekrine</div>
-                <div class="profile-icon"></div>
-                <div class="greeting">Hi there,</div>
-                <div class="profile-name">Mohammed Bekrine(@Broly)</div>
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+                <div class="top-top">
+                    <button type="submit">Search</button>
+                    <input type="text" name="search" id="search">
+                    <div class="bell-icon">.</div>
+                    <div class="profile-icon">.</div>
+                    <div class="account-name">Mohammed Bekrine</div>
+                </div>
+                <div class="bottom-bottom">
+                    <div class="profile-icon">.</div>
+                    <div class="greeting">Hi there,</div>
+                    <div class="profile-name">Mohammed Bekrine(@Broly)</div>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
             <div class="main-content">
                 <div class="Projects">
@@ -87,42 +102,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="announcements">
-                    <div>Announcements</div>
-                    <div class="part">
-                        <p>Site Maintenance</p>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                <div class="side">
+                    <div class="announcements">
+                        <div>Announcements</div>
+                        <div class="part">
+                            <p>Site Maintenance</p>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="part">
+                            <p>Community Share Day</p>
+                            <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        </div>
+                        <div class="part">
+                            <p>Updated Privacy Policy</p>
+                            <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</p>
+                        </div>
                     </div>
-                    <div class="part">
-                        <p>Community Share Day</p>
-                        <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                    </div>
-                    <div class="part">
-                        <p>Updated Privacy Policy</p>
-                        <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</p>
-                    </div>
-                </div>
-                <div class="trending">
-                    <div>Trending</div>
-                    <div class="Profile">
-                        <div class="icon"></div>
-                        <div class="tag">@tegan</div>
-                        <div class="title">World Peace Builder</div>
-                    </div>
-                    <div class="Profile">
-                        <div class="icon"></div>
-                        <div class="tag">@morgan</div>
-                        <div class="title">Super Cool Project</div>
-                    </div>
-                    <div class="Profile">
-                        <div class="icon"></div>
-                        <div class="tag">@kendall</div>
-                        <div class="title">Lige Changing App</div>
-                    </div>
-                    <div class="Profile">
-                        <div class="icon"></div>
-                        <div class="tag">@alex</div>
-                        <div class="title">No Traffic Maker</div>
+                    <div class="trending">
+                        <div>Trending</div>
+                        <div class="Profile">
+                            <div class="icon"></div>
+                            <div class="tag">@tegan</div>
+                            <div class="title">World Peace Builder</div>
+                        </div>
+                        <div class="Profile">
+                            <div class="icon"></div>
+                            <div class="tag">@morgan</div>
+                            <div class="title">Super Cool Project</div>
+                        </div>
+                        <div class="Profile">
+                            <div class="icon"></div>
+                            <div class="tag">@kendall</div>
+                            <div class="title">Lige Changing App</div>
+                        </div>
+                        <div class="Profile">
+                            <div class="icon"></div>
+                            <div class="tag">@alex</div>
+                            <div class="title">No Traffic Maker</div>
+                        </div>
                     </div>
                 </div>
             </div>
