finish the style of all the elements
Changed the color of the cards and the dashboard. Finished styling the top bar and the cards section

--- a/index.html
+++ b/index.html
@@ -39,87 +39,105 @@
         <div class="right-side">
             <div class="top-bar">
                 <div class="top-top">
-                    <button type="submit">Search</button>
-                    <input type="text" name="search" id="search">
-                    <div class="bell-icon">.</div>
-                    <div class="profile-icon">.</div>
-                    <div class="account-name">Mohammed Bekrine</div>
+                    <div class="left">
+                        <img src="icons/magnify.svg" alt="search icon">
+                        <input type="text" name="search" id="search">
+                    </div>
+                    <div class="right">
+                        <img src="icons/bell.svg" alt="notification icon">
+                        <img class="account-icon"  src="icons/profile-icon.jpeg" alt="account icon">
+                        <div class="account-name">Mohammed Bekrine</div>
+                    </div>
                 </div>
                 <div class="bottom-bottom">
-                    <div class="profile-icon">.</div>
-                    <div class="greeting">Hi there,</div>
-                    <div class="profile-name">Mohammed Bekrine(@Broly)</div>
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
+                    <img class="account-icon" src="icons/profile-icon.jpeg" alt="account icon">
+                    <div class="greeting">Hi there,<br>
+                         Mohammed Bekrine(@Broly)</div>
+                    <div class="btns">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
                 </div>
             </div>
             <div class="main-content">
                 <div class="Projects">
-                    <div>Projects</div>
+                    <div style="color: black;"><strong>Projects</strong></div>
                     <div class="cards">
                         <div class="card">
-                            <div>Super Cool Project</div>
+                            <div><strong>Super Cool Project</strong></div>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
+                            <div class="icons">
+                                <img src="icons/star.svg" alt="save icon">
+                                <img src="icons/eye.svg" alt="eye icon">
+                                <img src="icons/shuffle.svg" alt="share icon">
+                            </div>
                         </div>
                         <div class="card">
-                            <div>Less Cool Project</div>
+                            <div><strong>Less Cool Project</strong></div>
                             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
+                            <div class="icons">
+                                <img src="icons/star.svg" alt="save icon">
+                                <img src="icons/eye.svg" alt="eye icon">
+                                <img src="icons/shuffle.svg" alt="share icon">
+                            </div>
                         </div>
                         <div class="card">
-                            <div>Impossible App</div>
+                            <div><strong>Impossible App</strong></div>
                             <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
+                            <div class="icons">
+                                <img src="icons/star.svg" alt="save icon">
+                                <img src="icons/eye.svg" alt="eye icon">
+                                <img src="icons/shuffle.svg" alt="share icon">
+                            </div>
                         </div>
                         <div class="card">
-                            <div>Easy Peasy App</div>
+                            <div><strong>Easy Peasy App</strong></div>
                             <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
+                            <div class="icons">
+                                <img src="icons/star.svg" alt="save icon">
+                                <img src="icons/eye.svg" alt="eye icon">
+                                <img src="icons/shuffle.svg" alt="share icon">
+                            </div>
                         </div>
                         <div class="card">
-                            <div>Ad Blocker</div>
+                            <div><strong>Ad Blocker</strong></div>
                             <p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
+                            <div class="icons">
+                                <img src="icons/star.svg" alt="save icon">
+                                <img src="icons/eye.svg" alt="eye icon">
+                                <img src="icons/shuffle.svg" alt="share icon">
+                            </div>
                         </div>
                         <div class="card">
-                            <div>Money Maker</div>
+                            <div><strong>Money Maker</strong></div>
                             <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a</p>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
-                            <div class="card-icon"></div>
+                            <div class="icons">
+                                <img src="icons/star.svg" alt="save icon">
+                                <img src="icons/eye.svg" alt="eye icon">
+                                <img src="icons/shuffle.svg" alt="share icon">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="side">
+                    <div style="color: black;"><strong>Announcements</strong></div>
                     <div class="announcements">
-                        <div>Announcements</div>
                         <div class="part">
-                            <p>Site Maintenance</p>
+                            <p><strong>Site Maintenance</strong></p>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
                         </div>
                         <div class="part">
-                            <p>Community Share Day</p>
+                            <p><strong>Community Share Day</strong></p>
                             <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         </div>
                         <div class="part">
-                            <p>Updated Privacy Policy</p>
+                            <p><strong>Updated Privacy Policy</strong></p>
                             <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</p>
                         </div>
                     </div>
+                    <div style="color: black;"><strong>Trending</strong></div>
                     <div class="trending">
-                        <div>Trending</div>
                         <div class="Profile">
                             <div class="icon"></div>
                             <div class="tag">@tegan</div>
