made the icons clickable and change the card shape

--- a/index.html
+++ b/index.html
@@ -15,44 +15,44 @@
                 </div>
                 <div class="top-menu">
                         <img src="icons/home.svg" alt="Home icon">
-                        <div class="text">Home</div>
+                        <div class="text"><a href="">Home</a></div>
                         <img src="icons/account.svg" alt="Profile icon">
-                        <div class="text">Profile</div>
+                        <div class="text"><a href="">Profile</a></div>
                         <img src="icons/message.svg" alt="message icon">
-                        <div class="text">Messages</div>
+                        <div class="text"><a href="">Messages</a></div>
                         <img src="icons/clock.svg" alt="history icon">
-                        <div class="text">History</div>
+                        <div class="text"><a href="">History</a></div>
                         <img src="icons/pencil.svg" alt="task icon">
-                        <div class="text">Tasks</div>
+                        <div class="text"><a href="">Tasks</a></div>
                         <img src="icons/account-group.svg" alt="Community icon">
-                        <div class="text">Communities</div>
+                        <div class="text"><a href="">Communities</a></div>
                 </div>
                 <div class="bottom-menu">
                         <img src="icons/settings.svg" alt="settings icon">
-                        <div class="text">Settings</div>
+                        <div class="text"><a href="">Settings</a></div>
                         <img src="icons/help.svg" alt="support icon">
-                        <div class="text">Support</div>
+                        <div class="text"><a href="">Support</a></div>
                         <img src="icons/shield.svg" alt="privacy icon">
-                        <div class="text">Privacy</div>
+                        <div class="text"><a href="">Privacy</a></div>
                 </div>
         </div>
         <div class="right-side">
             <div class="top-bar">
                 <div class="top-top">
                     <div class="left">
-                        <img src="icons/magnify.svg" alt="search icon">
-                        <input type="text" name="search" id="search">
+                        <a href=""><img src="icons/magnify.svg" alt="search icon"></a>
+                        <input type="search" name="search" id="search">
                     </div>
                     <div class="right">
-                        <img src="icons/bell.svg" alt="notification icon">
+                        <a href=""><img src="icons/bell.svg" alt="notification icon"></a>
                         <img class="account-icon"  src="icons/profile-icon.jpeg" alt="account icon">
-                        <div class="account-name">Mohammed Bekrine</div>
+                        <div class="account-name"><strong>Mohammed Bekrine</strong></div>
                     </div>
                 </div>
                 <div class="bottom-bottom">
                     <img class="account-icon" src="icons/profile-icon.jpeg" alt="account icon">
-                    <div class="greeting">Hi there,<br>
-                         Mohammed Bekrine(@Broly)</div>
+                    <div class="greeting"><strong>Hi there,<br>
+                         Mohammed Bekrine(@Broly)</strong></div>
                     <div class="btns">
                         <button>New</button>
                         <button>Upload</button>
@@ -65,57 +65,75 @@
                     <div style="color: black;"><strong>Projects</strong></div>
                     <div class="cards">
                         <div class="card">
-                            <div><strong>Super Cool Project</strong></div>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
-                            <div class="icons">
-                                <img src="icons/star.svg" alt="save icon">
-                                <img src="icons/eye.svg" alt="eye icon">
-                                <img src="icons/shuffle.svg" alt="share icon">
+                            <div class="left-color"></div>
+                            <div class="right-part">
+                                <div><strong>Super Cool Project</strong></div>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                                <div class="icons">
+                                    <a href=""><img src="icons/star.svg" alt="save icon"></a>
+                                    <a href=""><img src="icons/eye.svg" alt="eye icon"></a>
+                                    <a href=""><img src="icons/shuffle.svg" alt="share icon"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
-                            <div><strong>Less Cool Project</strong></div>
-                            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                            <div class="icons">
-                                <img src="icons/star.svg" alt="save icon">
-                                <img src="icons/eye.svg" alt="eye icon">
-                                <img src="icons/shuffle.svg" alt="share icon">
+                            <div class="left-color"></div>
+                            <div class="right-part">
+                                <div><strong>Less Cool Project</strong></div>
+                                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                                <div class="icons">
+                                    <a href=""><img src="icons/star.svg" alt="save icon"></a>
+                                    <a href=""><img src="icons/eye.svg" alt="eye icon"></a>
+                                    <a href=""><img src="icons/shuffle.svg" alt="share icon"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
-                            <div><strong>Impossible App</strong></div>
-                            <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-                            <div class="icons">
-                                <img src="icons/star.svg" alt="save icon">
-                                <img src="icons/eye.svg" alt="eye icon">
-                                <img src="icons/shuffle.svg" alt="share icon">
+                            <div class="left-color"></div>
+                            <div class="right-part">
+                                <div><strong>Impossible App</strong></div>
+                                <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                                <div class="icons">
+                                    <a href=""><img src="icons/star.svg" alt="save icon"></a>
+                                    <a href=""><img src="icons/eye.svg" alt="eye icon"></a>
+                                    <a href=""><img src="icons/shuffle.svg" alt="share icon"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
-                            <div><strong>Easy Peasy App</strong></div>
-                            <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-                            <div class="icons">
-                                <img src="icons/star.svg" alt="save icon">
-                                <img src="icons/eye.svg" alt="eye icon">
-                                <img src="icons/shuffle.svg" alt="share icon">
+                            <div class="left-color"></div>
+                            <div class="right-part">
+                                <div><strong>Easy Peasy App</strong></div>
+                                <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+                                <div class="icons">
+                                    <a href=""><img src="icons/star.svg" alt="save icon"></a>
+                                    <a href=""><img src="icons/eye.svg" alt="eye icon"></a>
+                                    <a href=""><img src="icons/shuffle.svg" alt="share icon"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
-                            <div><strong>Ad Blocker</strong></div>
-                            <p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p>
-                            <div class="icons">
-                                <img src="icons/star.svg" alt="save icon">
-                                <img src="icons/eye.svg" alt="eye icon">
-                                <img src="icons/shuffle.svg" alt="share icon">
+                            <div class="left-color"></div>
+                            <div class="right-part">
+                                <div><strong>Ad Blocker</strong></div>
+                                <p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p>
+                                <div class="icons">
+                                    <a href=""><img src="icons/star.svg" alt="save icon"></a>
+                                    <a href=""><img src="icons/eye.svg" alt="eye icon"></a>
+                                    <a href=""><img src="icons/shuffle.svg" alt="share icon"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
-                            <div><strong>Money Maker</strong></div>
-                            <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a</p>
-                            <div class="icons">
-                                <img src="icons/star.svg" alt="save icon">
-                                <img src="icons/eye.svg" alt="eye icon">
-                                <img src="icons/shuffle.svg" alt="share icon">
+                            <div class="left-color"></div>
+                            <div class="right-part">
+                                <div><strong>Money Maker</strong></div>
+                                <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a</p>
+                                <div class="icons">
+                                    <a href=""><img src="icons/star.svg" alt="save icon"></a>
+                                    <a href=""><img src="icons/eye.svg" alt="eye icon"></a>
+                                    <a href=""><img src="icons/shuffle.svg" alt="share icon"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
